# orb-behavior-atlas

./: AGENTS.md  DECISIONS.md  README.md  pyproject.toml  requirements.txt
docs/: 00_Project_Charter.md  02_System_Architecture.md  03_Event_Dictionary.md  04_Behavior_Dictionary.md  05_Hypothesis_Register.md  06_Research_Log.md  07_Edge_Repository.md  08_Validation_Framework.md  09_Project_Dashboard.md  10_Data_Dictionary.md  11_Data_Engine.md  12_ORB_Engine.md  13_Event_Engine.md  14_Behavior_Engine.md  15_Research_Engine.md  16_Validation_Engine.md  17_Strategy_Engine.md  18_Backtesting_Framework.md  19_Portfolio_Engine.md  20_Live_Execution_Engine.md  21_Monitoring_Observability.md  22_Project_Roadmap.md  23_Implementation_Plan.md  24_Coding_Standards.md  25_Testing_Standards.md  26_Release_Management.md  27_Governance.md  28_Development_Guide.md  29_Architecture_Decision_Records.md  30_Project_Manifesto.md  31_Project_Operating_System.md
src/: app.py  main.py
tests/: test_backtesting_foundation.py  test_backtesting_orchestrator.py  test_basic_performance_analyzer.py  test_data_engine_architecture.py  test_data_engine_interface_contracts.py  test_data_engine_models.py  test_data_engine_normalization_contracts.py  test_data_engine_orchestration_contracts.py  test_data_engine_provider_contracts.py  test_data_engine_quality_contracts.py  test_data_engine_runtime_contracts.py  test_data_engine_session_contracts.py  test_data_engine_storage_contracts.py  test_data_engine_validation_contracts.py  test_execution_foundation.py  test_performance_foundation.py  (+11 more)
(+79 files in other folders)
